# b3d

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
src/b3d/: __init__.py  b3d.py  b3d_.py  cli.py
src/b3d/aws/: __init__.py  api_gateway.py  ec2.py  helpers.py  iam.py  kms.py  lambda_.py  resource_groups_tagging.py  s3.py  ssm.py
src/b3d/delete/: __init__.py  api_gateway.py  ec2.py  iam.py  kms.py  lambda_.py  s3.py  ssm.py  unsupported.py
src/b3d/resources/: __init__.py  ec2.py  iam.py
src/b3d/utils/: __init__.py  loading.py  log_msg.py
src/b3d/utils/aws/: __init__.py  ec2.py  iam.py  lambda_.py  resource_groups_tagging.py
tests/: config.py  conftest.py  test_composite.py  test_ec2.py  test_simple.py  utils.py
tests/aws/: ec2.py
tests/terraform/: api_gateway.tf  ec2.tf  iam.tf  kms.tf  lambda.tf  provider.tf  s3.tf  ssm.tf  variables.tf
tests/utils/aws/: ec2.py
