[project]
name = "b3d"
version = "0.1.0"
description = """
    Boto3 utility library that supports deletion of collections of \
    AWS resources (such as temporary resources created during unit \
    tests).
    """
license = {file = "LICENSE"}
authors = [
    {name = "Ben Getchell"},
    {email = "bengetch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "b3q==0.3.2",
    "boto3==1.24.27",
    "botocore==1.27.27",
    "jmespath==1.0.1",
    "python-dateutil==2.8.2",
    "s3transfer==0.6.0",
    "six==1.16.0",
    "urllib3==1.26.9",
    "pytest~=7.1.2"
]

[project.urls]
homepage = "https://github.com/nthparty/b3d"
repository = "https://github.com/nthparty/b3d"

[project.optional-dependencies]
test = [
    "pytest~=7.0"
]
publish = [
    "twine~=4.0"
]

[build-system]
requires = [
    "build~=0.8",
    "setuptools~=62.0",
    "wheel~=0.37"
]
build-backend = "setuptools.build_meta"
