[project]
name = "b3d"
version = "0.1.6"
description = """
    Boto3 utility library that supports deletion of collections of \
    AWS resources (such as temporary resources created during unit \
    tests).
    """
license = {file = "LICENSE"}
authors = [
    {name = "Ben Getchell"},
    {email = "bengetch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "b3q~=0.4",
    "boto3~=1.24",
    "jmespath~=1.0",
    "python-dateutil~=2.8",
    "s3transfer~=0.6",
    "six~=1.16",
    "urllib3~=1.26"
]

[project.urls]
homepage = "https://github.com/nthparty/b3d"
repository = "https://github.com/nthparty/b3d"

[project.optional-dependencies]
test = [
    "pytest~=7.0",
    "terrorform~=0.2"
]
lint = [
    "pylint~=2.14.0"
]
publish = [
    "build~=0.8",
    "twine~=4.0"
]

[build-system]
requires = [
    "build~=0.8",
    "setuptools~=62.0",
    "wheel~=0.37"
]
build-backend = "setuptools.build_meta"
